// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField it always renders a label when \`alwaysShowLabel\` is true 1`] = `
.c4 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: -12px;
}

.c7 {
  margin-left: -32px;
  margin-top: -12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  margin-top: -20px;
  padding-left: 40px;
  padding-right: 40px;
}

.c6::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c6::-moz-placeholder {
  color: #4f6f8f;
}

.c6:-ms-input-placeholder {
  color: #4f6f8f;
}

.c6::placeholder {
  color: #4f6f8f;
}

.c6::-ms-clear {
  display: none;
}

.c6:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c2 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  margin-top: 6px;
  padding-left: 40px;
  font-size: 10px;
  color: #4f6f8f;
  font-weight: 700;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <label
    className="c2"
    color="gray"
    fontSize="10px"
    fontWeight="bold"
    htmlFor="with-both-icons"
    style={
      Object {
        "animation": "eMLfYp 0.3s",
      }
    }
  >
    A Label
  </label>
  <div
    className="c3"
    width={1}
  >
    <div
      className="c1 c4"
    >
      <svg
        className="c5"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c6"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "8px",
          "paddingTop": "20px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c7"
    >
      <svg
        className="c5"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it does not display a label when Label has \`hidden\` prop 1`] = `
.c6 {
  margin-left: -32px;
  margin-top: 8px;
}

.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 40px;
  padding-right: 40px;
}

.c5::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c5::-moz-placeholder {
  color: #4f6f8f;
}

.c5:-ms-input-placeholder {
  color: #4f6f8f;
}

.c5::placeholder {
  color: #4f6f8f;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c6"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders a form field wth a label and icons 1`] = `
.c6 {
  margin-left: -32px;
  margin-top: 8px;
}

.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 40px;
  padding-right: 40px;
}

.c5::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c5::-moz-placeholder {
  color: #4f6f8f;
}

.c5:-ms-input-placeholder {
  color: #4f6f8f;
}

.c5::placeholder {
  color: #4f6f8f;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c6"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders a with a both icons 1`] = `
.c6 {
  margin-left: -32px;
  margin-top: 8px;
}

.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 40px;
  padding-right: 40px;
}

.c5::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c5::-moz-placeholder {
  color: #4f6f8f;
}

.c5:-ms-input-placeholder {
  color: #4f6f8f;
}

.c5::placeholder {
  color: #4f6f8f;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c6"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders a with a conditional right side icon 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 8px;
}

.c3::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c3::-moz-placeholder {
  color: #4f6f8f;
}

.c3:-ms-input-placeholder {
  color: #4f6f8f;
}

.c3::placeholder {
  color: #4f6f8f;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <input
      aria-label={null}
      className="c3"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`FormField it renders a with a left side icon 1`] = `
.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 40px;
}

.c5::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c5::-moz-placeholder {
  color: #4f6f8f;
}

.c5:-ms-input-placeholder {
  color: #4f6f8f;
}

.c5::placeholder {
  color: #4f6f8f;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-left-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`FormField it renders a with a right side icon 1`] = `
.c4 {
  margin-left: -32px;
  margin-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 8px;
  padding-right: 40px;
}

.c3::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c3::-moz-placeholder {
  color: #4f6f8f;
}

.c3:-ms-input-placeholder {
  color: #4f6f8f;
}

.c3::placeholder {
  color: #4f6f8f;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <input
      aria-label={null}
      className="c3"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c1 c4"
    >
      <svg
        className="c5"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders using FormField alias 1`] = `
.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
  padding-left: 40px;
}

.c5::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c5::-moz-placeholder {
  color: #4f6f8f;
}

.c5:-ms-input-placeholder {
  color: #4f6f8f;
}

.c5::placeholder {
  color: #4f6f8f;
}

.c5::-ms-clear {
  display: none;
}

.c5:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8 l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c5"
      id="with-left-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`FormField it renders using FormField alias with Select  1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: gray;
}

.c5 {
  pointer-events: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 8px;
  padding-right: 32px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c4:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c3"
      width={1}
    >
      <select
        aria-label={null}
        className="c4"
        fontSize={1}
        id="with-no-options"
        onChange={[Function]}
        style={
          Object {
            "paddingBottom": "14px",
            "paddingTop": "14px",
            "transition": "padding-top 0.1s, padding-bottom 0.1s",
          }
        }
        width={1}
      />
      <svg
        className="c5 c6"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders using FormField alias with Select and Icon 1`] = `
.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: #4f6f8f;
}

.c7 {
  pointer-events: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 40px;
  padding-right: 32px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c6:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <div
      className="c5"
      width={1}
    >
      <select
        aria-label={null}
        className="c6"
        fontSize={1}
        id="with-no-options"
        onChange={[Function]}
        style={
          Object {
            "paddingBottom": "14px",
            "paddingTop": "14px",
            "transition": "padding-top 0.1s, padding-bottom 0.1s",
          }
        }
        width={1}
      />
      <svg
        className="c7 c8"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders using FormField alias with Select and Options 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: #4f6f8f;
}

.c5 {
  pointer-events: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 8px;
  padding-right: 32px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c4:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c3"
      width={1}
    >
      <select
        aria-label={null}
        className="c4"
        fontSize={1}
        id="with-options"
        onChange={[Function]}
        style={
          Object {
            "paddingBottom": "14px",
            "paddingTop": "14px",
            "transition": "padding-top 0.1s, padding-bottom 0.1s",
          }
        }
        width={1}
      >
        <option>
          Option 1
        </option>
        <option>
          Option 2
        </option>
        <option>
          Option 3
        </option>
      </select>
      <svg
        className="c5 c6"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders using FormField alias with Select icons on both sides 1`] = `
.c9 {
  margin-left: -32px;
  margin-top: 8px;
}

.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: #4f6f8f;
}

.c7 {
  pointer-events: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c6:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M12.6,10.1C11.8,8,9.8,6.5,7.5,6.5C4.4,6.5,2,8.9,2,12s2.4,5.5,5.5,5.5c2.4,0,4.4-1.5,5.1-3.6h4
	v3.6h3.6v-3.7H22v-3.7H12.6z M7.5,13.8c-1,0-1.8-0.8-1.8-1.8s0.8-1.8,1.8-1.8S9.3,11,9.3,12S8.5,13.8,7.5,13.8z"
        />
      </svg>
    </div>
    <div
      className="c5"
      width={1}
    >
      <select
        aria-label={null}
        className="c6"
        fontSize={1}
        id="with-options"
        onChange={[Function]}
        style={
          Object {
            "paddingBottom": "14px",
            "paddingTop": "14px",
            "transition": "padding-top 0.1s, padding-bottom 0.1s",
          }
        }
        width={1}
      >
        <option>
          Option 1
        </option>
        <option>
          Option 2
        </option>
        <option>
          Option 3
        </option>
      </select>
      <svg
        className="c7 c8"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
        />
      </svg>
    </div>
    <div
      className="c1 c9"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders using FormField alias with Select icons on the left side 1`] = `
.c3 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: #4f6f8f;
}

.c7 {
  pointer-events: none;
}

.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 40px;
  padding-right: 32px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c6:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c1 c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M12.6,10.1C11.8,8,9.8,6.5,7.5,6.5C4.4,6.5,2,8.9,2,12s2.4,5.5,5.5,5.5c2.4,0,4.4-1.5,5.1-3.6h4
	v3.6h3.6v-3.7H22v-3.7H12.6z M7.5,13.8c-1,0-1.8-0.8-1.8-1.8s0.8-1.8,1.8-1.8S9.3,11,9.3,12S8.5,13.8,7.5,13.8z"
        />
      </svg>
    </div>
    <div
      className="c5"
      width={1}
    >
      <select
        aria-label={null}
        className="c6"
        fontSize={1}
        id="with-options"
        onChange={[Function]}
        style={
          Object {
            "paddingBottom": "14px",
            "paddingTop": "14px",
            "transition": "padding-top 0.1s, padding-bottom 0.1s",
          }
        }
        width={1}
      >
        <option>
          Option 1
        </option>
        <option>
          Option 2
        </option>
        <option>
          Option 3
        </option>
      </select>
      <svg
        className="c7 c8"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField it renders using FormField alias with Select icons on the right side 1`] = `
.c7 {
  margin-left: -32px;
  margin-top: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c6 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: #4f6f8f;
}

.c5 {
  pointer-events: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 8px;
  padding-right: 40px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c4:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

.c0 .c1 {
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width={1}
  >
    <div
      className="c3"
      width={1}
    >
      <select
        aria-label={null}
        className="c4"
        fontSize={1}
        id="with-options"
        onChange={[Function]}
        style={
          Object {
            "paddingBottom": "14px",
            "paddingTop": "14px",
            "transition": "padding-top 0.1s, padding-bottom 0.1s",
          }
        }
        width={1}
      >
        <option>
          Option 1
        </option>
        <option>
          Option 2
        </option>
        <option>
          Option 3
        </option>
      </select>
      <svg
        className="c5 c6"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4,8l4.6,4.6L16.6,8L18,9.4l-6,6l-6-6L7.4,8z"
        />
      </svg>
    </div>
    <div
      className="c1 c7"
    >
      <svg
        className="c8"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
